--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.1",
+    "daisyui": "^2.51.5",
     "ethers": "^5.7.2",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
